@@ -10,6 +10,8 @@
     <field name="path"/>
     <label name="file_name"/>
     <field name="file_name"/>
+    <label name="state"/>
+    <field name="state"/>
     <group id="flag_fields" colspan="4" col="6">
         <label name="header"/>
         <field name="header"/>
