@@ -9,5 +9,6 @@
     <field name="header"/>
     <field name="separator"/>
     <field name="quote"/>
+    <field name="state"/>
     <field name="fields"/>
 </tree>
